# anthropic-proxy

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  TECHNICAL.md
.jj/working_copy/: checkout  tree_state
examples/: client.rs  zed-config.json  zed-usage.md
nix/modules/: devshell.nix  rust.nix
src/: api_key.rs  auth.rs  config.rs  device_flow.rs  error.rs  main.rs  proxy.rs  session.rs  types.rs
